kalan yerler duzeltildi+footer sayfasi yapildi

--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
         </div>
         <div class="col-3 news-2">
           <h2 class="text-end">Ülker'den al haberi.</h2>
-          <div class="btn text-white btn-lg d-flex text-dark text-center">
+          <div class="btn text-white btn-lg d-flex text-center">
             <a
               class="text-white list-style-none"
               href="https://www.ulker.com.tr/tr/haberler"
@@ -934,23 +934,129 @@
         <div class="col-3">
           <h1>Ülker TV</h1>
         </div>
+
         <div class="col-9 position-relative">
           <div class="big-circle position-absolute"></div>
         </div>
       </div>
+      <div
+        id="carouselExampleAutoplaying"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row gx-2">
+              <div class="col-4">
+                <p class="pa-1">
+                  İçindeki çocuğu ortaya çıkarmak için Ülker lezzetlerinde bir
+                  ısırık al yeter.🍫🥧🍪
+                </p>
+                <div class="btn btn-lg mt-3">
+                  <a
+                    class="text-white list-style-none fw-bold border-5"
+                    href="https://www.youtube.com/channel/UCrd19Gk2M85A-2OiCUIZrLQ"
+                    >YOUTUBE KANALIMIZ &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                    &nbsp;<span class="fw-bold">></span></a
+                  >
+                </div>
+              </div>
+              <div class="col-6">
+                <a href="https://www.youtube.com/watch?v=BD_1ED7VOWg"
+                  ><img
+                    src="https://www.ulker.com.tr/documents/1(1).jpg"
+                    class="d-block img-fluid rounded-4"
+                    alt="..."
+                /></a>
+                <div class="div position-relative">
+                  <i
+                    class="bi bi-play-fill fs-1 position-absolute text-white"
+                  ></i>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div class="row gx-2">
+              <div class="col-4">
+                <p class="pa-1">
+                  İçindeki çocuğun en mutlu anlarında Ülker lezzetleri
+                  yanında.🍫🥧🍪
+                </p>
+                <div class="btn btn-lg mt-3">
+                  <a
+                    class="text-white list-style-none fw-bold border-5"
+                    href="https://www.youtube.com/channel/UCrd19Gk2M85A-2OiCUIZrLQ"
+                    >YOUTUBE KANALIMIZ &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                    &nbsp;<span class="fw-bold">></span></a
+                  >
+                </div>
+              </div>
+              <div class="col-6">
+                <a href="https://youtu.be/cfvgDdoLQhU"
+                  ><img
+                    src="https://www.ulker.com.tr/documents/2(2).jpg"
+                    class="d-block img-fluid rounded-4"
+                    alt="..."
+                /></a>
+                <div class="div position-relative">
+                  <i
+                    class="bi bi-play-fill fs-1 position-absolute text-white"
+                  ></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gx-2">
+              <div class="col-4">
+                <p class="pa-1">Ekstra bi'Biskrem versem?</p>
+                <div class="btn btn-lg mt-3">
+                  <a
+                    class="text-white list-style-none fw-bold border-5"
+                    href="https://www.youtube.com/channel/UCrd19Gk2M85A-2OiCUIZrLQ"
+                    >YOUTUBE KANALIMIZ &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                    &nbsp;<span class="fw-bold">></span></a
+                  >
+                </div>
+              </div>
+              <div class="col-6">
+                <a href="https://youtu.be/RiENDgrcfWM"
+                  ><img
+                    src="https://www.ulker.com.tr/documents/ulker_tv/extrabiskrem_ulkertv.jpg"
+                    class="d-block img-fluid rounded-4"
+                    alt="..."
+                /></a>
+                <div class="div position-relative">
+                  <i
+                    class="bi bi-play-fill fs-1 position-absolute text-white"
+                  ></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
     <br />
     <br />
     <br />
@@ -961,7 +1067,7 @@
       <h1>Sürdürülebilirlik</h1>
       <div class="row justify-content-center align-items-center">
         <div class="col-2">
-          <p class="pt-5 p-1">
+          <p class="pt-5 pa-1">
             1944’ten bu yana farklı kategorilerde gıda ürünlerini
             tüketicilerimizle buluşturuyoruz. İşimizi yaparken çiftçimizden
             aldığımız en iyi mahsulü işleyerek, yine en iyi, en kaliteli ve en
@@ -1002,7 +1108,7 @@
       </div>
       <div class="row justify-content-center align-items-center">
         <div class="col-2">
-          <p class="pt-5 p-1">
+          <p class="pt-5 pa-1">
             Sürdürülebilirlik yaklaşımını, iş yapış şeklimizin merkezine
             yerleştirerek, yeni nesillere yaşanabilir ve mutlu bir dünya
             bırakmak için çalışıyoruz. Ülker’in kuruluşunun 80. yılı olan 2024’e
@@ -1042,6 +1148,57 @@
         </div>
       </div>
     </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <footer>
+      <div class="container-fluid p-5">
+        <div class="d-flex row fw-bold red-1">
+          <div>
+            <h3 class="fw-bold text-white">
+              "Mutlu edip mutlu olmak için çalışıyoruz."
+            </h3>
+          </div>
+        </div>
+        <div class="row pt-5">
+          <div class="col-7">
+            <div class="row fw-bold text-white">
+              <div class="col">HABERLER</div>
+              <div class="col">KURUMSAL</div>
+              <div class="col">ÜLKER TV</div>
+              <div class="col">YATIRIMCI İLŞ.</div>
+              <div class="col">BİZE ULAŞIN</div>
+            </div>
+          </div>
+          <div class="col-5 text-end text-white fs-5">
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-twitter-x ps-4"></i>
+            <i class="bi bi-instagram ps-4"></i>
+            <i class="bi bi-youtube ps-4"></i>
+            <i class="bi bi-linkedin ps-4"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <footer-end>
+      <div class="div-end position-relative">
+        <div class="container-fluid p-5 text-white position-absolute">
+          <div class="row justify-content-center align-items-center">
+            <div class="col-4 fs-3 fw-bold">YILDIZ HOLDING</div>
+            <div class="offset-3 col-5">
+              <div class="row">
+                <div class="col-8">
+                  2024 YILDIZ HOLDING TÜM HAKLARI SAKLIDIR
+                </div>
+                <div class="col-4">KULLANIM KOŞULLARI</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer-end>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
